crates/test-better/tests/ui/rest_not_last.stderr
error: `..` must be the final element of the pattern
  --> tests/ui/rest_not_last.rs:13:63
   |
13 |     let _ = check!(point).satisfies(matches_struct!(Point { .., x: eq(1) }));
   |                                                               ^
